--- a/views/layouts/application.haml
+++ b/views/layouts/application.haml
@@ -36,7 +36,7 @@
   .left-side-bar-bg
   .left-side-bar
     .logo
-      %img.homeLogoBtn{:height => "138", :src => "/images/logo.png", :width => "230", :border => "0", :class => "icon", :href => "#"}
+      %img.homeLogoBtn{:height => "33", :src => "/images/logo.png", :width => "327", :border => "0", :class => "icon", :href => "#"}
       //%p 5510 MORNINGSIDE, No. 120
       //%p HOUSTON, TEXAS 77005
       //%p.phone-num 713-590-0610
@@ -49,115 +49,61 @@
   .menu-container
     %ul
       %li
-        %a{:href => "#", :id => "main-1-link"} HOME
+        %a{:href => "#", :id => "main-1-link"} Home|
         .menu-hl
       %li
-        %a{:href => "#", :id => "main-5-link"} ABOUT
-        .menu-hl
+        %a{:href => "#", :id => "main-5-link"} About|
+        .menu-hl{:style => "margin-left: 110px"}
       %li
-        %a{:href => "#", :id => "main-2-link"} SERVICES
-        .menu-hl
+        %a{:href => "#", :id => "main-2-link"} Services|
+        .menu-hl{:style => "margin-left: 220px"}
       %li
-        %a{:href => "#", :id => "main-3-link"} GALLERY
-        .menu-hl
+        %a{:href => "#", :id => "main-3-link"} Gallery|
+        .menu-hl.menu-hl{:style => "margin-left: 330px"}
       %li
-        %a{:href => "#", :id => "main-4-link"} CONTACT
-        .menu-hl
-      //%li
-      //  %a{:href => "#", :id => "main-5-link"} CONTACT
-      //  .menu-hl
-      //%li
-      //  %a{:href => "#", :id => "main-6-link"} HAPPY HOURS
-      //  .menu-hl
-      //%li
-      //  %a{:href => "#", :id => "main-7-link"} MENU
-      //  .menu-hl
-      //  %ol.sub-menu#sub-menu-6
-      //    %li#sub-menu-6-item-1
-      //      .red-line
-      //      Lunch
-      //    %li#sub-menu-6-item-2 
-      //      .red-line
-      //      Diner
-      //    %li#sub-menu-6-item-5
-      //      .red-line
-      //      Brunch
-      //    %li#sub-menu-6-item-4
-      //      .red-line
-      //      Wine List
-      //    %li#sub-menu-6-item-3
-      //      .red-line
-      //      %span{:style => "font-size: 13px; letter-spacing: 0.1em"}Martini
-      //    %li#sub-menu-6-item-6
-      //      .red-line
-      //      %span{:style => "font-size: 12px; letter-spacing: 0.075em"}Scratch Cocktails
-      //%li
-      //  %a{:href => "#", :id => "main-8-link"} CONTACT
-      //  .menu-hl
-      //  %ol.sub-menu#sub-menu-8
-      //    %li#sub-menu-8-item-1
-      //      .red-line
-      //      Contact
-      //    %li#sub-menu-8-item-2 
-      //      .red-line
-      //      Direction
+        %a{:href => "#", :id => "main-4-link"} Contact
+        .menu-hl.menu-hl{:style => "margin-left: 440px"}
   #homePage
   #calendarPage
     .content-border
-      .content
+      .content{:style => "height: 640px;"}
         %br
-        %h1 You deserve the best
-        %p Exceptional Events is a premier event planning agency that makes our clients' dreams become a spectacular reality. Our expertly experienced staff has multiple years of experience in providing top-notch service to clients, and we bring beautiful ideas, action and organization to every project we touch. 
-        %p From the beginning seeds of planning to the actual day of your event, we are there with you providing a completely customized experience for your individual needs and desires. Whether it is a special night on the town, a winter white wedding or an executive meeting - we make it happen, and always with an exquisite touch.
-        %p We maintain quality relationships with the finest vendors and venue spaces, both locally and out-of-state, so that we can provide unparalleled service and fair pricing for our clients. From event design and decor to staffing solutions and lighting we are there with you every step of the way.
-        %br
+        %h1 Curabitur feugiat hendrerit 
+        .half-content
+          %p Vestibulum eu ante ac odio vulputate sodales vitae sit amet leo. Sed neque dolor, viverra eu imperdiet non, tincidunt eu dolor. Fusce lacinia elementum tristique. Curabitur feugiat hendrerit sem, et vestibulum quam ultricies et. Cras aliquam lorem vel diam dignissim in condimentum nibh vehicula. Nam commodo dignissim diam, quis mollis nibh facilisis dictum.
+          %p Donec nec dapibus orci. Aliquam rutrum risus vitae nibh tempus interdum. Curabitur condimentum fermentum sapien ac imperdiet. Suspendisse pretium, odio vel porttitor iaculis, tortor sem fringilla massa, et scelerisque tortor nisi non mi. Suspendisse enim ante, scelerisque at semper vel, euismod rutrum arcu. 
+          %p Curabitur nec erat a tellus ullamcorper sodales. Donec viverra condimentum risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit semper arcu nec sagittis. Morbi ullamcorper ultricies lacus vel sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          %br
+        .half-content
+          %p Maecenas porttitor tempor odio quis accumsan. Curabitur faucibus tempus lacus sit amet dapibus. Phasellus convallis lectus ac nisl dignissim mattis. Donec suscipit hendrerit orci, eget dapibus nunc posuere quis. Vivamus convallis bibendum ullamcorper. Ut at lectus sit amet libero dapibus porttitor eu vitae urna. 
+          %p Fusce ac nunc sed quam venenatis commodo id at libero. Nam pretium, dui a consequat ultricies, mauris urna ultricies nisi, vel aliquam mauris urna ac odio. Phasellus orci magna, laoreet in auctor sit amet, tristique vitae ante. Mauris semper, massa ut adipiscing mattis, leo nulla lacinia nisi, et dapibus nulla nunc quis lectus.
   #venuePage
     .content-border
       .content
         %br
-        %h1 Services
-        %p Our clients look for a planning service that attend to their needs promptly and efficiently, who can tailor their events making it a pleasurable and a memorable experience.
-        %p We have provided consulting and planning for the following kinds of events:
-        %h2 Wedding
+        %h1 Morbi non turpis
+        %p Cras in mollis odio. Morbi scelerisque ultrices est ac hendrerit. Curabitur nec erat a tellus ullamcorper sodales. Donec viverra condimentum risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        %p Maecenas suscipit semper arcu nec sagittis. Morbi ullamcorper ultricies lacus vel sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec ullamcorper sem. Suspendisse egestas diam id magna lobortis sed viverra nunc aliquam
+        %h2 Maecenas porttitor
         %ul
-          %li Engagement parties
-          %li Showers 
-          %li Rehearsal dinners
-          %li Receptions 
-          %li Budgeting Social Events: Birthday parties, graduations, family reunions, baby showers, anniversaries, vendor coordination and arrangement, budgets. Corporate Events: Holiday parties, corporate retreats, customer and employee awards or appreciation events.
-        %h2 Social Events
+          %li Nam nisi lectus
+          %li Nam nisi lectus
+          %li Nam nisi lectus
+          %li Nam nisi lectus
+        %h2 Cras in mollis odio
         %ul
-          %li Birthday parties 
-          %li Bar/Bat Mitzvah 
-          %li Graduations 
-          %li Family reunions 
-          %li Baby showers 
-          %li Anniversaries 
-          %li Private parties 
-          %li Family Reunions 
-        %h2 Corporate Events
-        %ul
-          %li Holiday parties 
-          %li Executive meetings 
-          %li Corporate retreats 
-          %li Employee appreciation awards 
-          %li Training 
-          %li Budgeting
-        %h2 Large Events
-        %ul
-          %li Fashion shows 
-          %li Non-profit events 
-          %li Carnivals / Festivals 
-          %li Casino & Hotel events 
-          %li Galas & Award Ceremonies 
-          %li Trade Shows & Conventions 
+          %li Quisque elit orci 
+          %li Quisque elit orci 
+          %li Quisque elit orci 
+          %li Quisque elit orci
         %br
+        %br 
   #galleryPage
     .content-border
       .content
         %br
         %h1 Gallery
-        %h2 Weddings
+        %h2 Aenean porta
         .gallery-container
           %a{:href => "/images/gallery/wedding/1_big.jpg", :rel => "lightbox[wedding]"}
             %img{:height => "100", :src => "/images/gallery/wedding/1.jpg", :width => "100"}
@@ -183,49 +129,16 @@
             %img{:height => "100", :src => "/pics/weddings/7.jpg", :width => "100"}
           %a{:href => "/pics/weddings/8_big.jpg", :rel => "lightbox[wedding]"}
             %img{:height => "100", :src => "/pics/weddings/8.jpg", :width => "100"}
-          %a{:href => "/pics/weddings/9_big.jpg", :rel => "lightbox[wedding]"}
-            %img{:height => "100", :src => "/pics/weddings/9.jpg", :width => "100"}
           //%a{:href => "/pics/weddings/10_big.jpg", :rel => "lightbox[wedding]"}
           //  %img{:height => "100", :src => "/pics/weddings/10.jpg", :width => "100"}
           //%a{:href => "/pics/weddings/11_big.jpg", :rel => "lightbox[wedding]"}
           //  %img{:height => "100", :src => "/pics/weddings/11.jpg", :width => "100"}
           //%a{:href => "/pics/weddings/12_big.jpg", :rel => "lightbox[wedding]"}
           //  %img{:height => "100", :src => "/pics/weddings/12.jpg", :width => "100"}
-          %a{:href => "/pics/weddings/13_big.jpg", :rel => "lightbox[wedding]"}
-            %img{:height => "100", :src => "/pics/weddings/13.jpg", :width => "100"}
-          %a{:href => "/pics/weddings/14_big.jpg", :rel => "lightbox[wedding]"}
-            %img{:height => "100", :src => "/pics/weddings/14.jpg", :width => "100"}
-          %a{:href => "/pics/weddings/15_big.jpg", :rel => "lightbox[wedding]"}
-            %img{:height => "100", :src => "/pics/weddings/15.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/16_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/16.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/17_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/17.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/18_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/18.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/19_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/19.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/20_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/20.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/20_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/10.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/21_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/21.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/22_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/22.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/23_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/23.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/24_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/24.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/25_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/25.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/26_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/26.jpg", :width => "100"}
-          //%a{:href => "/pics/weddings/27_big.jpg", :rel => "lightbox[wedding]"}
-          //  %img{:height => "100", :src => "/pics/weddings/27.jpg", :width => "100"}
+
         %br
         %br
-        %h2 Corporate Events
+        %h2 Vestibulum eu
         .gallery-container
           //%a{:href => "/images/gallery/corperate/1_big.jpg", :rel => "lightbox[corperate]"}
           //  %img{:height => "100", :src => "/images/gallery/corperate/1.jpg", :width => "100"}
@@ -243,50 +156,9 @@
             %img{:height => "100", :src => "/pics/corporateEvent/3.jpg", :width => "100"}
           %a{:href => "/pics/corporateEvent/4_big.jpg", :rel => "lightbox[corperate]"}
             %img{:height => "100", :src => "/pics/corporateEvent/4.jpg", :width => "100"}
-          %a{:href => "/pics/corporateEvent/5_big.jpg", :rel => "lightbox[corperate]"}
-            %img{:height => "100", :src => "/pics/corporateEvent/5.jpg", :width => "100"}
-          %a{:href => "/pics/corporateEvent/6_big.jpg", :rel => "lightbox[corperate]"}
-            %img{:height => "100", :src => "/pics/corporateEvent/6.jpg", :width => "100"}
+
         %br
         %br
-        %h2 Other Exceptional Events
-        .gallery-container
-          %a{:href => "/images/gallery/party/1_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/images/gallery/party/1.jpg", :width => "100"}
-          %a{:href => "/images/gallery/party/2_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/images/gallery/party/2.jpg", :width => "100"}
-          %a{:href => "/images/gallery/party/3_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/images/gallery/party/3.jpg", :width => "100"}
-          %a{:href => "/images/gallery/party/4_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/images/gallery/party/4.jpg", :width => "100"}
-          %a{:href => "/pics/holidayParty/1_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/holidayParty/1.jpg", :width => "100"}
-          %a{:href => "/pics/holidayParty/2_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/holidayParty/2.jpg", :width => "100"}
-          %a{:href => "/pics/holidayParty/3_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/holidayParty/3.jpg", :width => "100"}
-          %a{:href => "/pics/holidayParty/4_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/holidayParty/4.jpg", :width => "100"}
-          %a{:href => "/pics/holidayParty/5_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/holidayParty/5.jpg", :width => "100"}
-          %a{:href => "/pics/holidayParty/6_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/holidayParty/6.jpg", :width => "100"}
-          %a{:href => "/pics/holidayParty/7_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/holidayParty/7.jpg", :width => "100"}
-          %a{:href => "/pics/holidayParty/8_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/holidayParty/8.jpg", :width => "100"}
-          %a{:href => "/pics/babyShower/1_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/babyShower/1.jpg", :width => "100"}
-          %a{:href => "/pics/babyShower/2_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/babyShower/2.jpg", :width => "100"}
-          %a{:href => "/pics/babyShower/3_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/babyShower/3.jpg", :width => "100"}
-          %a{:href => "/pics/babyShower/4_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/babyShower/4.jpg", :width => "100"}
-          %a{:href => "/pics/babyShower/5_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/babyShower/5.jpg", :width => "100"}
-          %a{:href => "/pics/babyShower/6_big.jpg", :rel => "lightbox[party]"}
-            %img{:height => "100", :src => "/pics/babyShower/6.jpg", :width => "100"}
   #reservationPage
     .content-border
       .content
@@ -294,21 +166,26 @@
         %h1 Contact
         %br
         %h2 Phone
-        %p (713) 530-7265
+        %p (999) 999-9999
 
         %h2 Email
-        %p nicolebrown@wedoexceptionalevents.com
+        %p samplemail@domain.name
 
         %h2 Address
-        %p 5500 E Sam Houston Pkwy N Ste 102 | Houston, TX 77015
+        %p 5510 MORNINGSIDE, No. 120| Houston, TX 77015
         %br
         %h2 Contact Form
         .contact-form
           %iframe{:allowtransparency => "true", :frameborder => "0", :height => "400", :scrolling => "no", :src => "https://media3creative.wufoo.com/embed/s7p1a7/", :style => "width:90%;border:none;margin-left:20px;"}
         %br
+  //.footer
+  //  Copyright &copy Exceptional Events, 2011. All Rights Reserved. 
+  //  %a.ourLink{:href => "http://media3creative.com/", :title => "Media 3 Creative"} POWERED BY | Media 3 Creative     
   .footer
-    Copyright &copy Exceptional Events, 2011. All Rights Reserved. 
-    %a.ourLink{:href => "http://media3creative.com/", :title => "Media 3 Creative"} POWERED BY | Media 3 Creative     
+    %p 5510 MORNINGSIDE, No. 120
+    %p HOUSTON, TEXAS 77015
+    %p.phone-num 999-999-9999
+    %p INFO@DOMAIN.COM
   .copyright-box 
     //%a.ourLink{:href => "http://media3creative.com/forms/q7p5x7/", :title => "Media 3 Creative"} POWERED BY | Media 3 Creative     
   .photo-preload
