--- a/sass/stylesheet.sass
+++ b/sass/stylesheet.sass
@@ -1,331 +1,341 @@
 @font-face
-	font-family: TrajanPro-Regular
-	src: url(/fonts/TrajanPro-Regular.otf) format("opentype")
+  font-family: TrajanPro-Regular
+  src: url('/fonts/trajanpro-regular-webfont.eot')
+  src: url('/fonts/trajanpro-regular-webfont.eot?#iefix') format('embedded-opentype'),url('/fonts/trajanpro-regular-webfont.woff') format('woff'),url('/fonts/trajanpro-regular-webfont.ttf') format('truetype'),url('/fonts/trajanpro-regular-webfont.svg#embedfont-1Medium') format('svg')
+  font-weight: normal
+  font-style: normal
 @font-face
-	font-family: TrebuchetMS
-	src: url(/fonts/TrebuchetMS.ttf) format("truetype")
+  font-family: Helvetica_light
+  src: url(/fonts/helvetica_light.ttf) format("truetype")
 
 .preloader
-	position: fixed
-	z-index: 100
-	top: 0px
-	left: 0px
-	width: 100%
-	//max-height: 1000px
-	height: 100%
-	background-color: #FFFFFF
-	-webkit-background-size: cover
-	-moz-background-size: cover
-	-o-background-size: cover
-	background-size: cover
+  position: fixed
+  z-index: 100
+  top: 0px
+  left: 0px
+  width: 100%
+  //max-height: 1000px
+  height: 100%
+  background-color: #FFFFFF
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
 .preloader-box
-	text-align: center
-	position: relative
-	margin: auto
-	margin-top: 25%
-	height: 200px
-	width: 200px
+  text-align: center
+  position: relative
+  margin: auto
+  margin-top: 25%
+  height: 200px
+  width: 200px
 .bg1
-	position: fixed
-	top: 0px
-	left: 0px
-	width: 100%
-	//max-height: 1000px
-	height: 100%
-	background-color: #000000
-	background: url(/images/bg_1.jpg) no-repeat top center scroll
-	-webkit-background-size: cover
-	-moz-background-size: cover
-	-o-background-size: cover
-	background-size: cover
+  position: fixed
+  top: 0px
+  left: 0px
+  width: 100%
+  //max-height: 1000px
+  height: 100%
+  background-color: #000000
+  background: url(/images/bg_1.jpg) no-repeat top center scroll
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
 .bg2
-	position: fixed
-	top: 0px
-	left: 0px
-	width: 100%
-	//max-height: 1000px
-	height: 100%
-	background-color: #000000
-	background: url(/images/bg_1.jpg) no-repeat top center scroll
-	-webkit-background-size: cover
-	-moz-background-size: cover
-	-o-background-size: cover
-	background-size: cover
+  position: fixed
+  top: 0px
+  left: 0px
+  width: 100%
+  //max-height: 1000px
+  height: 100%
+  background-color: #000000
+  background: url(/images/bg_1.jpg) no-repeat top center scroll
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
 .left-side-bar-bg
-	background-attachment: scroll
-	background-clip: border-box
-	background-color: transparent
-	background-image: url("/images/side_bar_bg.png")
-	background-origin: padding-box
-	background-position: 0 0
-	background-repeat: repeat
-	background-size: auto auto
-	height: 100%
-	left: 0
-	position: fixed
-	top: 0
-	width: 562px
+  background-attachment: scroll
+  background-clip: border-box
+  background-color: transparent
+  background-image: url("/images/side_bar_bg.png")
+  background-origin: padding-box
+  background-position: 0 0
+  background-repeat: repeat
+  background-size: auto auto
+  height: 100%
+  left: 0
+  position: fixed
+  top: 0
+  width: 562px
 .left-side-bar
-	position: fixed
-	left: 0px
-	top: 0px
-	//background: rgba(0, 0, 0, 1)
-	//background: url(/images/side_bar_bg.png)
-	width: 400px
-	height: 100%
-	min-height: 750px
+  position: fixed
+  left: 0px
+  top: 0px
+  //background: rgba(0, 0, 0, 1)
+  //background: url(/images/side_bar_bg.png)
+  width: 400px
+  height: 100%
+  min-height: 750px
 .logo
-	//background-image: url(/images/logo.png)
-	margin-top: 20px
-	margin-left: 20px
-	position: relative
-	height: 138px
-	width: 230px
+  //background-image: url(/images/logo.png)
+  margin-top: 50px
+  margin-left: 50px
+  position: relative
+  height: 33px
+  width: 327px
 .footer
-	position: fixed
-	background-image: url("/images/trans_bg.png")
-	border: 1px solid #696969
-	height: 20px
-	width: 100%
-	bottom: 0px
-	left: 0px
-	color: black
-	font-size: 12px
-	z-index: 10
-	padding-left: 20px
-	padding-right: 20px
-	padding-top: 5px
-	text-align: right
+  position: absolute
+  //background-color: #FFFFFF
+  height: 170px
+  width: 400px
+  bottom: 0px
+  text-align: left
+  margin-left: 30px
+  color: #E6E6E6
+  font-size: 10px
 .menu-container
-	position: fixed
-	top: 145px
-	left: 59px
-	height: 211px
-	width: 200px
-	//background-color: #FFFFFF
-	font-family: "Georgia"
-	font-weight: 20
-	//color: #fbf8f8
-	//background-image: url("/images/menu_container.png")
+  position: absolute
+  top: 35px
+  left: 400px
+  height: 211px
+  width: 800px
+  //background-color: #FFFFFF
+  font-family: TrajanPro-Regular
+  font-weight: 20
+  //color: #fbf8f8
+  //background-image: url("/images/menu_container.png")
 .menu-container ul
-	position: absolute
-	list-style-type: none
-	letter-spacing: 0.15em
-	line-height: 35px
-	padding-left: 10px
+  position: absolute
+  list-style-type: none
+  letter-spacing: 0.15em
+  line-height: 35px
+  padding-left: 10px
 .menu-container li
-	margin-top: 5px
-	//position: absolute
-	//margin-left: 50px
+  margin-top: 5px
+  display: inline-block
+  //position: absolute
+  //margin-left: 50px
 .menu-container ul a
-	opacity: 0
-	//visibility: hidden
-	font-size: 12px
-	text-align: left
-	width: 200px
-	color: white
-	//background-color: #FFFFFF
-	text-decoration: none
-	line-height: 20px
+  text-shadow: 0 -2px 2px #FFFFFF
+  font-family: TrajanPro-Regular
+  opacity: 0
+  //visibility: hidden
+  font-size: 15px
+  text-align: center
+  width: 200px
+  color: white
+  //background-color: #FFFFFF
+  text-decoration: none
+  line-height: 20px
 .menu-hl
-	position: absolute
-	left: 20px
-	margin-top: 0px
-	background-color: #594A42
-	//-moz-border-radius: 8px
-	//border-radius: 8px
-	height: 3px
-	width: 0px
+  position: absolute
+  left: 20px
+  margin-top: 0px
+  background-color: #594A42
+  //-moz-border-radius: 8px
+  //border-radius: 8px
+  height: 3px
+  width: 0px
 .red-line
-	display: inline
-	position: relative
-	float: left
-	height: 2px
-	width: 7px
-	margin-top: 7px
-	margin-right: 5px
-	background-color: #931616
+  display: inline
+  position: relative
+  float: left
+  height: 2px
+  width: 7px
+  margin-top: 7px
+  margin-right: 5px
+  background-color: #931616
 .sub-menu-box
-	float: left
+  float: left
 .sub-menu
-	display: none
-	list-style-type: none
-	position: relative
-	line-height: 20px
-	font-size: 12px
+  display: none
+  list-style-type: none
+  position: relative
+  line-height: 20px
+  font-size: 12px
 
 .copyright-box
-	position: fixed
-	text-align: left
-	//background-color: #FFFFFF
-	height: 40px
-	width: 400px
-	bottom: 0px
-	right: 0px
-	text-align: left
-	margin-left: 80px
-	font-size: 10px
+  position: fixed
+  text-align: left
+  //background-color: #FFFFFF
+  height: 40px
+  width: 400px
+  bottom: 0px
+  right: 0px
+  text-align: left
+  margin-left: 80px
+  font-size: 10px
 .ourLink
-	color: black
-	font-size: 12px
-	margin-right: 30px
+  color: black
+  font-size: 12px
+  margin-right: 30px
 .ourlink :hover
-	color: #696969
+  color: #696969
 .phone-num
-	color: #FFFFFF
-	font-size: 14px
+  color: #FFFFFF
+  font-size: 14px
 
 html
 
 #main-1-link,#main-2-link,#main-3-link,#main-4-link,#main-5-link,#main-6-link,#main-7-link,#main-8-link
-	display: block
-	height: 22px
-	width: 180px
-	padding-top: 2px
-	-moz-border-radius: 8px
-	border-radius: 8px
-	//background-color: #696969
+  display: block
+  height: 22px
+  width: 100px
+  padding-top: 2px
+  -moz-border-radius: 8px
+  border-radius: 8px
+  //background-color: #696969
 body
-	background-color: #000000
+  background-color: #000000
 h1
-	font-family: "Georgia"
-	font-size: 24px
-	color: black
-	margin-left: 30px
-	opacity: 1
-	font-weight: 100
-	border-bottom-color: #000000
-	border-bottom-style: solid
-	border-bottom-width: 1px
-	margin-right: 20px
+  font-family: TrajanPro-Regular
+  font-size: 24px
+  color: white
+  margin-left: 30px
+  opacity: 1
+  font-weight: 100
+  border-bottom-color: white
+  border-bottom-style: solid
+  border-bottom-width: 1px
+  margin-right: 20px
 
 h2
-	font-family: "TrajanPro-Regular"
-	font-size: 13px
-	color: black
-	margin: 0px
-	margin-left: 30px
-	opacity: 1
+  font-family: TrajanPro-Regular
+  font-size: 13px
+  color: white
+  margin: 0px
+  margin-left: 30px
+  opacity: 1
 p
-	color: black
-	opacity: 1
-	//margin: 20px
-	margin-left: 30px
-	margin-right: 20px
-	margin-top: 5px
-	//font-size: 12px
-	letter-spacing: 0.1em
-	font-family: "Georgia"
-	font-size: 15px
+  color: white
+  opacity: 1
+  //margin: 20px
+  margin-left: 40px
+  margin-right: 40px
+  margin-top: 15px
+  //font-size: 12px
+  letter-spacing: 0.1em
+  font-family: "Times New Roman", Times, serif
+  font-size: 15px
 img
-	border: 2px solid white
+  border: 2px solid white
 td
-	padding-left: 20px
+  padding-left: 20px
 li
-	font-size: 12px
-	letter-spacing: 0.1em
-	font-family: "Georgia"
+  font-size: 15px
+  letter-spacing: 0.12em
+  font-family: "Times"
+  color: white
+  
 .social-icon
-	position: relative
-	margin-left: 20px
+  position: relative
+  margin-left: 20px
 .photo-preload
-	position: fixed
-	top: 0px
-	left: -2000px
-	height: 1px
-	width: 1px	
+  position: fixed
+  top: 0px
+  left: -2000px
+  height: 1px
+  width: 1px
 
 .content-container
 
 
 #homePage, #venuePage, #galleryPage, #reservationPage, #calendarPage, #happyHourPage, #menuPage-1, #menuPage-2, #menuPage-3, #menuPage-4, #menuPage-5, #menuPage-6, #contactPage-1, #contactPage-2
-	position: absolute
-	padding: 10px
-	z-index: 1
-	display: block
-	top: 80px
-	left: 370px
-	padding: 20px
-	width: 500px
-	height: auto
-	//overflow: auto
-	font-size: 12px
+  position: absolute
+  padding: 10px
+  z-index: 1
+  display: block
+  top: 120px
+  left: 370px
+  padding: 20px
+  width: 800px
+  height: auto
+  //overflow: auto
+  font-size: 12px
 .scroller
-	padding: 20px
-	position: absolute
-	left: 0
-	top: 0
-	z-index: 20
-	-webkit-touch-callout: none
-	-webkit-tap-highlight-color: rgba(0,0,0,0)
-	width: 100%
-	padding: 0
-	border: 1px solid #aaa
-	border-style: solid
-	border-width: 0.7px
-	border-color: #383733
-	background: rgba(0, 0, 0, 0.7)
-	height: auto
+  padding: 20px
+  position: absolute
+  left: 0
+  top: 0
+  z-index: 20
+  -webkit-touch-callout: none
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
+  width: 100%
+  padding: 0
+  border: 1px solid #aaa
+  border-style: solid
+  border-width: 0.7px
+  border-color: #383733
+  background: rgba(0, 0, 0, 0.7)
+  height: auto
 .content-border
-	border: 1px solid white
-	width: 560px
-	height: auto
-	padding-left: 15px
-	padding-top: 15px
-	padding-right: 15px
-	padding-bottom: 0px
+  border: 1px solid gray
+  width: 760px
+  height: auto
+  padding-left: 15px
+  padding-top: 15px
+  padding-right: 15px
+  padding-bottom: 0px
+  background-image: url("/images/trans_bg_black.png")
 .content
-	padding: 0px
-	margin-bottom: 15px
-	z-index: 20
-	width: 100%
-	height: auto
-	background-image: url("/images/trans_bg.png")
+  position: relative
+  padding: 0px
+  margin-bottom: 15px
+  z-index: 20
+  width: 760px
+  height: auto
+  background-image: url("/images/trans_bg_black.png")
+  .half-content
+    width: 50%
+    height: auto
+    float: left
 .close-content
-	//width: 50px
-	z-index: 2
-	height: 25px
-	background-color: #931616
-	float: right
-	color: white
-	font-family: "TrajanPro-Regular"
-	font-size: 15px
-	width: 75px
-	text-align: center
-	padding-top: 3px
-	margin-top: 0px
+  //width: 50px
+  z-index: 2
+  height: 25px
+  background-color: #931616
+  float: right
+  color: white
+  font-family: "TrajanPro-Regular"
+  font-size: 15px
+  width: 75px
+  text-align: center
+  padding-top: 3px
+  margin-top: 0px
+
 
 .close-content:hover
-	background-color: white
-	color: #931616
+  background-color: white
+  color: #931616
 .gallery-container
-	text-align: center
-	width: 500px
+  text-align: center
+  width: 800px
 
 .icon
-	border: 0 solid white
+  border: 0 solid white
 
 .normal-list
-	color: #CCCCCC
-	font-family: "TrajanPro-Regular"
-	line-height: 25px
+  color: #CCCCCC
+  font-family: "TrajanPro-Regular"
+  line-height: 25px
 .content-text 
-	background: rgba(255, 255, 255, 0.6)
-	height: auto
-	-moz-border-radius: 5px 25px 5px 25px
-	border-radius: 5px 25px 5px 25px
-	padding: 20px
-	padding-bottom: 40px
+  background: rgba(255, 255, 255, 0.6)
+  height: auto
+  -moz-border-radius: 5px 25px 5px 25px
+  border-radius: 5px 25px 5px 25px
+  padding: 20px
+  padding-bottom: 40px
 .contact-form
-	//margin-top: -40px
-	overflow: hidden
-	iframe
-		position: relative
-		top: -30px
-		margin-top: -30px
+  //margin-top: -40px
+  overflow: hidden
+  iframe
+    position: relative
+    top: -30px
+    margin-top: -30px
 .map
 .download
-	color: white
-	font-family: "TrajanPro-Regular"
-	font-size: 15px
-	margin: 20px
+  color: white
+  font-family: "TrajanPro-Regular"
+  font-size: 15px
+  margin: 20px
