--- a/views/layouts/application.haml
+++ b/views/layouts/application.haml
@@ -66,17 +66,18 @@
   #homePage
   #calendarPage
     .content-border
-      .content{:style => "height: 640px;"}
+      .content{:style => "height: 540px;"}
         %br
         %h1 Curabitur feugiat hendrerit 
         .half-content
           %p Vestibulum eu ante ac odio vulputate sodales vitae sit amet leo. Sed neque dolor, viverra eu imperdiet non, tincidunt eu dolor. Fusce lacinia elementum tristique. Curabitur feugiat hendrerit sem, et vestibulum quam ultricies et. Cras aliquam lorem vel diam dignissim in condimentum nibh vehicula. Nam commodo dignissim diam, quis mollis nibh facilisis dictum.
-          %p Donec nec dapibus orci. Aliquam rutrum risus vitae nibh tempus interdum. Curabitur condimentum fermentum sapien ac imperdiet. Suspendisse pretium, odio vel porttitor iaculis, tortor sem fringilla massa, et scelerisque tortor nisi non mi. Suspendisse enim ante, scelerisque at semper vel, euismod rutrum arcu. 
-          %p Curabitur nec erat a tellus ullamcorper sodales. Donec viverra condimentum risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit semper arcu nec sagittis. Morbi ullamcorper ultricies lacus vel sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          %p Suspendisse pretium, odio vel porttitor iaculis, tortor sem fringilla massa, et scelerisque tortor nisi non mi. Suspendisse enim ante, scelerisque at semper vel, euismod rutrum arcu. 
+          %p Curabitur nec erat a tellus ullamcorper sodales. Donec viverra condimentum risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           %br
         .half-content
           %p Maecenas porttitor tempor odio quis accumsan. Curabitur faucibus tempus lacus sit amet dapibus. Phasellus convallis lectus ac nisl dignissim mattis. Donec suscipit hendrerit orci, eget dapibus nunc posuere quis. Vivamus convallis bibendum ullamcorper. Ut at lectus sit amet libero dapibus porttitor eu vitae urna. 
           %p Fusce ac nunc sed quam venenatis commodo id at libero. Nam pretium, dui a consequat ultricies, mauris urna ultricies nisi, vel aliquam mauris urna ac odio. Phasellus orci magna, laoreet in auctor sit amet, tristique vitae ante. Mauris semper, massa ut adipiscing mattis, leo nulla lacinia nisi, et dapibus nulla nunc quis lectus.
+          %h2 Mauris semper
   #venuePage
     .content-border
       .content
